# serializer version: 1
# name: TestFind.test_find
  list([
    dict({
      'color': '#16FEBB',
      'count': 2,
      'description': 'Theory type successful together.',
      'id': 2,
      'name': 'Authority',
    }),
    dict({
      'color': '#177534',
      'count': 2,
      'description': 'Something first drug contain start almost wonder employee.',
      'id': 1,
      'name': 'Light',
    }),
  ])
# ---
# name: TestFind.test_find_by_name
  list([
    dict({
      'color': '#177534',
      'count': 0,
      'description': 'Something first drug contain start almost wonder employee.',
      'id': 1,
      'name': 'Light',
    }),
  ])
# ---
# name: TestFind.test_find_by_name.1
  list([
  ])
# ---
# name: test_edit[None]
  dict({
    'color': '#177534',
    'count': 2,
    'description': 'Something first drug contain start almost wonder employee.',
    'id': 1,
    'name': 'Summer',
  })
# ---
# name: test_get[200]
  dict({
    'color': '#177534',
    'count': 2,
    'description': 'Something first drug contain start almost wonder employee.',
    'id': 1,
    'name': 'Light',
  })
# ---
# name: test_get[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_remove[204]
  None
# ---
# name: test_remove[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
